further changes to homepage / layout

--- a/web-app/css/smart/color.css
+++ b/web-app/css/smart/color.css
@@ -337,8 +337,7 @@ h2.accordion-title.active{ color:#333;}
 
 
 /*============================================== FOOTER SECTION ==============================================*/
-#outerfooter{ background:#2d2d2d;}
-#footercontainer{ background:#383838;}
+#outerfooter{ background:#383838;}
 #footer{color:#8f8f8f;}
 #footer a, #footer a:visited{color:#8f8f8f;}
 #toTop{color:#8f8f8f}
