--- a/web-app/css/smart/inner.css
+++ b/web-app/css/smart/inner.css
@@ -33,7 +33,7 @@ USE THIS STYLE SHEET FOR INNER PAGE
 /* BLOG */
 .post {
     margin-bottom: 38px;
-    padding: 0 0 0px 0;
+    padding: 0;
     clear: both;
 }
 
@@ -139,7 +139,7 @@ USE THIS STYLE SHEET FOR INNER PAGE
 .com-line {
     width: 26px;
     position: absolute;
-    left: 0px;
+    left: 0;
     top: 23px;
 }
 
@@ -180,7 +180,7 @@ USE THIS STYLE SHEET FOR INNER PAGE
 }
 
 .comment-body {
-    margin: 0 0 0 0px;
+    margin: 0;
     padding: 18px;
     padding-left: 100px;
 }
@@ -191,7 +191,7 @@ USE THIS STYLE SHEET FOR INNER PAGE
 }
 
 .comment-body .more {
-    padding: 0px 0px;
+    padding: 0;
 }
 
 #commentform {
@@ -288,7 +288,6 @@ USE THIS STYLE SHEET FOR INNER PAGE
 /*======= Portfolio Navigation =======*/
 #filter {
     list-style-type: none;
-    padding: 0px 0px;
     margin: 0 0 30px 0;
     float: left;
     padding: 0;
@@ -300,7 +299,7 @@ USE THIS STYLE SHEET FOR INNER PAGE
 
 #filter li {
     list-style-type: none;
-    padding: 0 20px 0px 0px;
+    padding: 0 20px 0 0;
     line-height: 40px;
     float: left;
     font-family: 'Oswald', sans-serif, arial;
@@ -317,7 +316,7 @@ USE THIS STYLE SHEET FOR INNER PAGE
 }
 
 #filter li a, #filter li a:visited {
-    padding: 10px 0px;
+    padding: 10px 0;
     text-transform: uppercase;
 }
 
@@ -474,7 +473,7 @@ form {
 }
 
 fieldset {
-    border: 0px;
+    border: 0;
 }
 
 #contactform {
@@ -482,11 +481,10 @@ fieldset {
     position: relative;
 }
 
-#contactform label {
+#login label {
     display: block;
     width: 100%;
     float: left;
-    padding-bottom: 5px;
     font-weight: bold
 }
 
@@ -502,22 +500,22 @@ span.error {
     display: block;
 }
 
-#contactform input.text-input {
+#login input.text-input {
     margin-bottom: 15px;
     vertical-align: middle;
     width: 70%;
     float: left;
-    padding: 8px
+    padding: 4px
 }
 
-#contactform textarea {
+#login textarea {
     width: 90%;
     float: left;
     font-style: italic
 }
 
 #message {
-    margin-left: 0px;
+    margin-left: 0;
     font-weight: bold;
     color: #ff0000
 }
@@ -526,14 +524,14 @@ span.error {
 }
 
 #message p {
-    margin: 6px 0px;
+    margin: 6px 0;
 }
 
 .note {
     color: #d45454;
 }
 
-#contactform .button {
+#login .button {
     margin-top: 5px;
     cursor: pointer;
     clear: both;
