--- a/web-app/css/smart/style.css
+++ b/web-app/css/smart/style.css
@@ -195,9 +195,7 @@ img.aligncenter {
 img.alignnone {
     clear: both;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin: 0px;
+    margin: 0;
 }
 
 img.alignleft,
@@ -207,13 +205,12 @@ img.aligncenter {
 }
 
 /* lists, blockquotes and paragraphs */
-p, ul, ol, blockquote {
+p ol, blockquote {
     margin-bottom: 20px;
 }
 
 ul {
     list-style: disc;
-    margin: 0 0 18px 1.5em;
 }
 
 ul li {
