--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -85,3 +85,7 @@ input[type="color"]:focus,
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(82, 168, 236, 0.6);
     outline: 0 none;
 }
+
+.bottom-spacer {
+    margin-bottom: 10px;
+}
