--- a/web-app/css/smart/style.css
+++ b/web-app/css/smart/style.css
@@ -147,10 +147,10 @@ h1, h2, h3, h4, h5, h6 {
 .pagetitle {
     font-family: 'Oswald', sans-serif, arial;
     font-weight: 700;
-    font-size: 40px;
-    line-height: 55px;
-    margin-bottom: 0px;
-    text-transform: uppercase
+    font-size: 35px;
+    margin-bottom: 0;
+    color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
 }
 
 /* links */
@@ -529,18 +529,18 @@ ul.sf-menu li li li.sfHover ul {
 
 /*============================================ AFTER HEADER  =================================================*/
 #outerafterheader {
-    padding: 0 0 0px 0;
+    padding: 0;
 }
 
 #afterheader {
     position: relative;
+    height: 332px; /* must match height of banner image */
 }
 
 #pagetitle-container {
-    float: right;
-    text-align: right;
-    margin-right: 30px;
-    margin-top: 35px;
+    float: left;
+    margin-left: 20px;
+    margin-top: 10px;
 }
 
 .pattern1 {
@@ -548,7 +548,7 @@ ul.sf-menu li li li.sfHover ul {
 }
 
 .pattern2 {
-    background: url(../../images/pattern2.jpg) no-repeat;
+    background: url(../../images/banner.jpg) no-repeat;
 }
 
 .pattern3 {
