--- a/web-app/css/smart/style.css
+++ b/web-app/css/smart/style.css
@@ -361,8 +361,8 @@ code {
 #navigation {
     position: relative;
     z-index: 200;
-    margin: 39px 0px 0px 0px;
-    padding: 0px;
+    margin: 30px 0 0 0;
+    padding: 0;
 }
 
 /* Nav Menu */
