sections on "Other Customers" page are toggled via radio buttons

--- a/web-app/css/smart/color.css
+++ b/web-app/css/smart/color.css
@@ -40,7 +40,7 @@ a:hover, a.colortext:hover, .colortext a:hover {
 }
 
 /* Heading & text */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .title {
     color: #353535;
 }
 
