--- a/web-app/css/smart/style.css
+++ b/web-app/css/smart/style.css
@@ -323,14 +323,11 @@ code {
 /*** END CONTAINER ***/
 
 /*** HEADER ***/
-#top {
-    margin-bottom: 10px;
-}
 
 #logo {
     float: left;
     height: auto;
-    margin-top: 10px;
+    margin-right: 0;
 }
 
 #logo h1 {
@@ -372,6 +369,7 @@ code {
     z-index: 200;
     margin: 30px 0 0 0;
     padding: 0;
+    text-align: center;
 }
 
 /* Nav Menu */
@@ -382,7 +380,7 @@ code {
     overflow: visible;
     position: relative;
     float: right;
-    font-size: 13px;
+    font-size: 14px;
     font-family: 'Oswald', sans-serif, arial;
 }
 
@@ -421,7 +419,7 @@ code {
 }
 
 .sf-menu {
-    line-height: 100%;
+    line-height: 16px;
     position: absolute;
     right: 0;
     bottom: 0;
