--- a/web-app/css/smart/style.css
+++ b/web-app/css/smart/style.css
@@ -368,7 +368,7 @@ code {
 #navigation {
     position: relative;
     z-index: 200;
-    margin: 30px 0 0 0;
+    margin: 35px 0 0 0;
     padding: 0;
     text-align: center;
 }
@@ -381,7 +381,8 @@ code {
     overflow: visible;
     position: relative;
     float: right;
-    font-size: 14px;
+    font-size: 18px;
+    line-height: 18px;
     font-family: 'Oswald', sans-serif, arial;
 }
 
