moved banner images to their own directory

--- a/web-app/css/smart/style.css
+++ b/web-app/css/smart/style.css
@@ -552,7 +552,7 @@ ul.sf-menu li li li.sfHover ul {
 }
 
 .pattern2 {
-    background: url(../../images/banner.jpg) no-repeat;
+    background: url(../../images/banners/airport.jpg) no-repeat;
 }
 
 .pattern3 {
