--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -16,6 +16,12 @@
     position: fixed;
     right: 20px;
     bottom: 10px;
+    text-align: center;
+    font-weight: bold;
+    background-color: white;
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.25) inset;
+    padding: 5px;
+    border-radius: 10px;
 }
 
 .messageBarWarning {
