--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -21,6 +21,7 @@
     background-color: white;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.25) inset;
     padding: 5px;
+    padding-bottom: 0;
     border-radius: 10px;
 }
 
