--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -21,8 +21,16 @@
     background-color: white;
     box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.25) inset;
     padding: 5px;
-    padding-bottom: 0;
     border-radius: 10px;
+    line-height: 14px;
+}
+
+#contact-label {
+    color: #838383;
+}
+
+#contact span {
+    display: block;
 }
 
 .messageBarWarning {
