--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -1,3 +1,8 @@
+.baltic img {
+    margin-top: -20px;
+    float: left;
+}
+
 /* notification bar */
 
 .messageBarCommon {
@@ -63,7 +68,11 @@
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
 }
 
-.control-group.error .checkbox, .control-group.error .radio, .control-group.error input, .control-group.error select, .control-group.error textarea {
+.control-group.error .checkbox,
+.control-group.error .radio,
+.control-group.error input,
+.control-group.error select,
+.control-group.error textarea {
     color: inherit;
     margin-bottom: 0;
 }
